# Slappybird

./: CMakeLists.txt  DevNotes.md  README.md
includes/: entities.hpp  game.hpp  menu.hpp  operators.hpp  scene.hpp  world_1.hpp
includes/containers/: enums.hpp  game.hpp  properties.hpp  serializer.hpp  unlock_map.hpp
includes/globals/: debug.hpp  forward_decl.hpp  json_fwd.hpp  operators.hpp  utils.hpp
includes/types/: entities.hpp  enums.hpp  game.hpp  properties.hpp  serializer.hpp  unlock_map.hpp
includes/world/: entities.hpp  scene.hpp
resources/: load_from.json
resources/custom_scenes/: template.scene
resources/profiles/: god.profile  pleb.profile
resources/scenes/: WIP.scene  main_menu.scene  pause.menu  profile_select.scene  template.scene
resources/shaders/: gradient.fs
scripts/: setup.sh
src/: game.cpp  main.cpp  operators.cpp  scene.cpp  world_1.cpp
src/containers/: game_core.cpp  game_handlers.cpp  game_simulate.cpp  properties.cpp  serializer.cpp  serializer_cereal.cpp  serializer_dev.cpp
src/globals/: forward_decl.cpp  operators.cpp  utils.cpp
src/types/: entities_core.cpp  entities_load.cpp  game_core.cpp  game_handlers.cpp  properties_core.cpp  properties_load.cpp  serializer.cpp
src/world/: entities.cpp  scene.cpp
